--- a/Client/index.html
+++ b/Client/index.html
@@ -3,16 +3,18 @@
 <head>
     <title>jQuery AJAX POST Form</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div id="response">
+    <div id="response">
     <pre></pre>
 </div>
 
 <form id="my-form">
     <input type="text" name="title" placeholder="Title" />
     <input type="text" name="director" placeholder="Director" />
+    <input type="genre" name="genre" placeholder="Genre" />
 
     <button type="submit">Submit</button>
 </form>
