--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,24 @@
-{
-    <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-        <style>
-            body {
-                background-image: url("https://wallpaperaccess.com/full/202978.jpg");
-                background-size: 100% 100%;
-                background-repeat: no-repeat;
-                background-attachment: fixed;
-                background-position: center;
-                text-align: center;
-            }
-        </style>
-    </div>
-}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>jQuery AJAX POST Form</title>
+    <meta charset="utf-8">
+</head>
+<body>
+    background-image: url("");
+<div id="response">
+    <pre></pre>
+</div>
+
+<form id="my-form">
+    <input type="text" name="title" placeholder="Title" />
+    <input type="text" name="director" placeholder="Director" />
+    <input type="genre" name="genre" placeholder="Genre" />
+
+    <button type="submit">Submit</button>
+</form>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="./app.js"></script>
+</body>
+</html>
