--- a/Client/index.html
+++ b/Client/index.html
@@ -6,20 +6,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div id="response">
     <pre></pre>
-</div>
+    </div>
 
 <form id="my-form">
     <input type="text" name="title" placeholder="Title" />
-    <input type="text" name="director" placeholder="Director" />
-    <input type="genre" name="genre" placeholder="Genre" />
+    <input type="text" name="directorName" placeholder="Director Name" />
+    <input type="text" name="genre" placeholder="Genre" />
 
     <button type="submit">Submit</button>
+    <button type="submit">Show Library</button>
 </form>
+
+<div class="Container", id="DisplayScreen">
+    <p>
+        Data Should Show here!
+    </p>
+</div>
+
+
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="./app.js"></script>
+
 </body>
+
 </html>
