added an edit button to each movie in the movie row

--- a/Client/index.html
+++ b/Client/index.html
@@ -24,6 +24,7 @@
             <th>Title</th>
             <th>Genre</th>
             <th>Director</th>
+            <th>Edit</th>
         </tr>
         <tbody id="movieTable"></tbody>
     </table></center>
@@ -34,7 +35,7 @@
     <input type="text" name="title" placeholder="Title" />
     <input type="text" name="directorName" placeholder="Director Name" />
     <input type="text" name="genre" placeholder="Genre" />
-    <button type="submit">Submit</button>
+    <button type="submit">Edit</button>
 </form>
 
 
