--- a/Client/index.html
+++ b/Client/index.html
@@ -13,12 +13,9 @@
 <br>
 
 <form id="movieForm" align="middle">
-    <span>
-        <h4 >Edit the Table</h4>
-    </span>
-    <button type="button" onclick="edit()">Save Changes</button>
+    
     <br>
-    <br>
+
     <center><table>
         <tr>
             <th>Title</th>
@@ -35,7 +32,7 @@
     <input type="text" name="title" placeholder="Title" />
     <input type="text" name="directorName" placeholder="Director Name" />
     <input type="text" name="genre" placeholder="Genre" />
-    <button type="submit">Edit</button>
+    <button type="submit">Add Movie</button>
 </form>
 
 
