--- a/Client/index.html
+++ b/Client/index.html
@@ -12,7 +12,7 @@
 
 <br>
 
-<form id="movieForm" align="middle">
+<form id="movieForm" align="center">
     
     <br>
 
@@ -27,8 +27,8 @@
     </table></center>
 </form>
 
-<h4 align="middle">Do you not see your movie? Add it here!</h4>
-<form id="my-form" class="form" align="middle">
+<h4 align="center">Movie Missing? Add it here!</h4>
+<form id="my-form" class="form" align="center">
     <input type="text" name="title" placeholder="Title" />
     <input type="text" name="directorName" placeholder="Director Name" />
     <input type="text" name="genre" placeholder="Genre" />
